# midi-image-latent

./: .env.example  .gitignore  CLAUDE.md  EXPERIMENTS.md  Makefile  README.md  SETUP_GUIDE.md  index.html  pyproject.toml
.claude/: settings.json
.claude/agents/: alpha.md  bravo.md  charlie.md  delta.md  echo.md  orchestrator.md
.claude/commands/: check.md  kickoff.md  pr.md  status.md  sync.md
benchmarks/: __init__.py  bench_compare.py  bench_pipeline.py
configs/: base.yaml
configs/data/: lakh.yaml  lpd5.yaml  maestro.yaml  pop909.yaml
configs/experiments/: exp_1a_vae_comparison.yaml  exp_1b_detection_methods.yaml  exp_2_resolution_study.yaml  exp_3_channel_strategy.yaml  (+5 more)
docs/: GPU_DEFERRED_TASKS.md  GPU_SESSION_GUIDE.md  OPTIMIZATION_SPRINT.md  PLAN_data_subset.md  RUNNING_EXPERIMENTS.md
midi_vae/: __init__.py  config.py  registry.py
scripts/: download_data.sh  gpu_job.sh  gpu_session.sh  gpu_smoke_test.py  launch.sh  launch_all_agents.sh  merge_sweep_results.py  preprocess_dataset.py  run_experiment.py  run_experiment_distributed.py  setup_multiagent.sh  wandb_sync.sh
specs/: coordination.md  implementation_spec.md  midi_image_vae_implementation_spec.docx  midi_image_vae_research_proposal.docx
tests/: conftest.py  test_conditioning_metrics.py  test_config.py  test_detection.py  test_foundation.py  test_generative_metrics.py  test_integration_encode_decode.py  test_metrics.py  test_registry.py  test_rendering.py  test_sequence.py  test_sublatent.py  test_subset.py  test_train_sequence_pipeline.py  test_types.py  test_vae_wrappers.py
(+80 files in other folders)
