[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "midi-image-vae"
version = "0.1.0"
description = "Pretrained Image VAEs for MIDI Encoding via Piano-Roll Representations"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "diffusers>=0.28",
    "transformers>=4.40",
    "accelerate>=0.30",
    "safetensors",
    "pypianoroll>=1.0",
    "pretty_midi>=0.2.10",
    "mido",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "omegaconf>=2.3",
    "pydantic>=2.6",
    "structlog>=24.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "h5py>=3.10",
    "pyarrow>=15.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
extra = ["wandb>=0.16", "umap-learn>=0.5", "hmmlearn>=0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x --tb=short -q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.setuptools.packages.find]
include = ["midi_vae*"]
